--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=hello-world-spring-batch
+spring.datasource.url=jdbc:mysql://localhost:3307/spring_batch
+spring.datasource.username=root
+spring.datasource.password=1234567
+
+#Criacao de tabelas automaticamente ao iniciar a aplicacao
+spring.batch.jdbc.initialize-schema=always
